chore: rename WinOJ -> NoldOJ (project rename)
